feat: draggable task

--- a/index.html
+++ b/index.html
@@ -12,24 +12,61 @@
             <div class="add">
                 <h3>add +</h3>
             </div>
+
             <div class="task-status">
-                <div class="block">
                     <h2>backlog</h2>
-                    <div class="task"></div>
-                    <div class="task"></div>
-                </div>
-                <div class="block">
                     <h2>on going</h2>
-                    <div class="task"></div>
-                    <div class="task"></div>
-                </div>
-                <div class="block">
                     <h2>done</h2>
-                    <div class="task"></div>
-                    <div class="task"></div>
-                </div>
+<!--                <div class="block">-->
+<!--                </div>-->
+<!--                <div class="block">-->
+<!--                </div>-->
+<!--                <div class="block">-->
+<!--                </div>-->
             </div>
         </div>
     </main>
+
+    <div class="container">
+        <div class="task" style="background: #153448; color:whitesmoke;">
+            <h3>back-end</h3>
+            <p>membuat integrasi database dan mengatur method post & get</p>
+            <h4>09:00 - 05 Juni 2024</h4>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="task" style="background: #3C5B6F; color: whitesmoke">
+            <h3>responsive</h3>
+            <p>menerapkan desain responsif pada aplikasi</p>
+            <h4>15:00 - 35 Juni 2024</h4>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="task" style="background: gray;">
+            <h3>front-end</h3>
+            <p>mengeksekusi hasil diskusi desain UI/UX ke dalam bentuk coding</p>
+            <h4>23:59 - 27 April 2024</h4>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="task" style="background: #948979;">
+            <h3>desain awal UI/UX</h3>
+            <p>mendesain tampilan awal untuk aplikasi</p>
+            <h4>23:59 - 15 April 2024</h4>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="task" style="background:#DFD0B8;">
+            <h3>research model aplikasi</h3>
+            <p>mencari style atau bentuk aplikasi task management yang akan dibuat</p>
+            <h4>23:59 - 15 April 2024</h4>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
